[package]
name = "planet-td"
version = "0.1.0"
edition = "2021"

[dependencies]
#bevy = { version = "0.8", features = ["dynamic"] }
bevy = "0.8"
bevy_rapier2d = "0.16"
rand = "0.8.4"
serde = "1.0.143"
serde_json = "1.0"
wasm-bindgen = "0.2.82"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy-web-resizer = "3.0.0"
web-sys = "0.3"
